fixed the footer jumping up

--- a/src/index.css
+++ b/src/index.css
@@ -266,6 +266,7 @@ ul {
 
 body {
   background:rgb(177, 192, 199);
+  min-height: 100vh;
 }
 
 .page-title {
@@ -362,6 +363,10 @@ main {
    height: 3rem;
    width: 100%;
    text-align: center;
+   position: fixed;
+   bottom: 0;
+   left: 0;
+   right: 0;
 }
   
  .footer p {
